cabal-version: 1.12

name:           pipes-zlib-decoder
version:        1.0.0
synopsis:       Pipe that decodes a zlib stream.
description:    Please see the README on GitHub at <https://github.com/ellej/pipes-zlib-decoder#readme>
category:       Codec, Pipes
homepage:       https://github.com/ellej/pipes-zlib-decoder#readme
bug-reports:    https://github.com/ellej/pipes-zlib-decoder/issues
author:         Jelle Lingier
maintainer:     jelle.lingier@gmail.com
copyright:      2019 Jelle Lingier
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.adoc

source-repository head
  type: git
  location: https://github.com/ellej/pipes-zlib-decoder

library
  exposed-modules:
      Pipes.Decode.Zlib
  hs-source-dirs:
      src
  default-extensions: Rank2Types LambdaCase TupleSections FlexibleContexts
  build-depends:
      base >=4.7 && <5,
      containers >=0.5,
      mtl >=2.1,
      pipes >=4.1
  default-language: Haskell2010

test-suite stack-test-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      testsuite
  default-extensions: Rank2Types LambdaCase TupleSections FlexibleContexts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5,
      bytestring >=0.10,
      containers >=0.5,
      mtl >=2.1,
      pipes >=4.1,
      pipes-zlib-decoder,
      tasty >=0.7,
      tasty-hunit >=0.4,
      tasty-quickcheck >=0.3,
      transformers >=0.3,
      zlib >=0.5.4
  default-language: Haskell2010
